fix ICSI colors on IE (again)

--- a/web/themes/custom/legacy/css/src/__settings.conf-colors.less
+++ b/web/themes/custom/legacy/css/src/__settings.conf-colors.less
@@ -161,8 +161,8 @@
 // ICSI 2019
 // class .icsiconference
 @color-icsi-primary:   #1c847b;
-@color-icsi-secondary: #9a6f00;
-@color-icsi-accent:    #009fcf;
+@color-icsi-secondary: #0c5fa8;
+@color-icsi-accent:    #4987be;
 
 // EWRI LID 2018
 // class .lidconference
